--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: rugbyPlayer_database
+      MYSQL_DATABASE: rugby_player_database
       MYSQL_USER: user
       MYSQL_PASSWORD: password
     ports:
