rugbyPosition->rugby_position,テストの追加

--- a/src/test/resources/datasets/rugbyPlayers.yml
+++ b/src/test/resources/datasets/rugbyPlayers.yml
@@ -3,14 +3,14 @@ rugby_players:
     name: "Kenki, Fukuoka"
     height: 175
     weight: 81
-    rugbyPosition: "WTB"
+    rugby_position: "WTB"
   - id: "2"
     name: "Seiji, Hirao"
     height: 178
     weight: 78
-    rugbyPosition: "SO"
+    rugby_position: "SO"
   - id: "3"
     name: "Gunter, Ben"
     height: 192
     weight: 115
-    rugbyPosition: "FL"
+    rugby_position: "FL"
